--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -161,6 +161,10 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextEventCheck.cs" />
     <Compile Include="Assets\Scripts\Processes\ProcessAluminumEtch.cs" />
     <Compile Include="Assets\Scripts\tools\brushTool.cs" />
+    <Compile Include="Assets\Scripts\Dialogue\customs\textCreateBlueprint.cs" />
+    <Compile Include="Assets\Scripts\Checks\Level 2\checkMEA1.cs" />
+    <Compile Include="Assets\Scripts\Checks\Level 2\checkMEA2.cs" />
+    <Compile Include="Assets\Scripts\Checks\Level 2\checkMEA3.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
