added correct textbox images and paint icons to all levels and free-play mode

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Assets\Scripts\Checks\Level 2\checkMEA2.cs" />
     <Compile Include="Assets\Scripts\Processes\ProcessIonEtch.cs" />
     <Compile Include="Assets\Scripts\UI\ToggleCustom.cs" />
+    <Compile Include="Assets\Scripts\animation\errorAnimation.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextEventHandler.cs" />
     <Compile Include="Assets\Scripts\Dialogue\TextManager.cs" />
     <Compile Include="Assets\Scripts\CanvasButtons\save_button.cs" />
@@ -158,6 +159,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexColorCycler.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TeleType.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_ExampleScript_01.cs" />
+    <Compile Include="Assets\Scenes\thesis\thesisMeshGen.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TextConsoleSimulator.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexZoom.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ObjectSpin.cs" />
@@ -169,7 +171,6 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextEventCheck.cs" />
     <Compile Include="Assets\Scripts\Processes\ProcessWetEtch.cs" />
     <Compile Include="Assets\Scripts\tools\brushTool.cs" />
-    <Compile Include="Assets\Scripts\animation\errorAnimation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
