added level 4 temp

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -171,6 +171,9 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextEventCheck.cs" />
     <Compile Include="Assets\Scripts\Processes\ProcessWetEtch.cs" />
     <Compile Include="Assets\Scripts\tools\brushTool.cs" />
+    <Compile Include="Assets\Scripts\Dialogue\customs\textActivateToggle.cs" />
+    <Compile Include="Assets\Scripts\Checks\Level 3\checkBox.cs" />
+    <Compile Include="Assets\Scripts\Checks\Level 3\checkWetEtch.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
