--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -77,7 +77,7 @@
     <Compile Include="Assets\Scripts\errorManager.cs" />
     <Compile Include="Assets\Scripts\CanvasButtons\clear_button.cs" />
     <Compile Include="Assets\Scripts\levelRequirementManager.cs" />
-    <Compile Include="Assets\Scripts\Checks\Level 4\checkContacts.cs" />
+    <Compile Include="Assets\Scripts\Checks\Level 3\checkContacts.cs" />
     <Compile Include="Assets\Scripts\Checks\Level 4\checkPulldown.cs" />
     <Compile Include="Assets\Scripts\animation\SpinCastAnimationHandler.cs" />
     <Compile Include="Assets\Scripts\CanvasButtons\fill_button.cs" />
@@ -112,7 +112,6 @@
     <Compile Include="Assets\Scripts\Checks\Level 4\checkCantileverScaffold.cs" />
     <Compile Include="Assets\Scripts\Checks\Level 1\checkPhotoButtonPressed.cs" />
     <Compile Include="Assets\Scripts\Checks\Level 1\checkDepositOnPhotoResist.cs" />
-    <Compile Include="Assets\Scripts\Checks\Level 4\checkCenter.cs" />
     <Compile Include="Assets\Scripts\altText.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexShakeA.cs" />
     <Compile Include="Assets\Scripts\Checks\Level 1\checkDepositButtonPressed.cs" />
@@ -182,6 +181,13 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextEventCheck.cs" />
     <Compile Include="Assets\Scripts\Processes\ProcessWetEtch.cs" />
     <Compile Include="Assets\Scripts\tools\brushTool.cs" />
+    <Compile Include="Assets\Scripts\Dialogue\customs\textSetupProbes.cs" />
+    <Compile Include="Assets\Scripts\Dialogue\customs\textResetAndMoveProbes.cs" />
+    <Compile Include="Assets\Scripts\Checks\Level 3\checkRed.cs" />
+    <Compile Include="Assets\Scripts\Checks\Level 3\checkBlue.cs" />
+    <Compile Include="Assets\Scripts\Checks\Level 3\checkGreen.cs" />
+    <Compile Include="Assets\Scripts\Checks\Level 3\checkNoContact.cs" />
+    <Compile Include="Assets\Scripts\UI\requirementIcon.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
